--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,14 @@
   <groupId>com.richcode</groupId>
   <artifactId>springboot-kafka-demo</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>springboot-kafka-demo</name>
   <url>http://maven.apache.org</url>
+  <modules>
+    <module>kafka-producer</module>
+    <module>kafka-consumer</module>
+  </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
