feat: Integrate producer with kafka

--- a/kafka-producer/src/main/resources/application.yaml
+++ b/kafka-producer/src/main/resources/application.yaml
@@ -1,2 +1,13 @@
 server:
   port: 8081
+
+spring:
+  kafka:
+    bootstrap-servers: localhost:9091,localhost:9092,localhost:9093
+
+kafka:
+  topics:
+    purchases:
+      name: richdemo.customer.purchases.0
+      partitions: 3
+      replicas: 2
