feat: Config by application.yaml which event publisher is in use

--- a/kafka-producer/src/main/resources/application.yaml
+++ b/kafka-producer/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ spring:
     bootstrap-servers: localhost:9091,localhost:9092,localhost:9093
 
 kafka:
+  producer: async
   topics:
     purchases:
       name: richdemo.customer.purchases.0
