feat: Configurable producer delivery strategy by application.yaml

--- a/kafka-producer/src/main/resources/application.yaml
+++ b/kafka-producer/src/main/resources/application.yaml
@@ -6,7 +6,9 @@ spring:
     bootstrap-servers: localhost:9091,localhost:9092,localhost:9093
 
 kafka:
-  producer: async
+  producer:
+    strategy: at-most-once
+    publishing: async
   topics:
     purchases:
       name: richdemo.customer.purchases.0
