--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,18 @@
 
 version: '3.8'
 services:
+
+  db:
+    image: postgres:16.1-alpine
+    container_name: database
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: dbcache
+    restart: always
+
   zookeeper:
     image: confluentinc/cp-zookeeper:7.4.3
     hostname: zookeeper
