feat: Provide configurable consumer type and listener type

--- a/kafka-consumer/src/main/resources/application.yaml
+++ b/kafka-consumer/src/main/resources/application.yaml
@@ -13,6 +13,8 @@ kafka:
   consumer:
     client-id: kafka-demo-consumer
     group-id: kafka-demo-consumer-group-id-1
+    processing-type: single
+    idempotent: true
   topics:
     purchases:
       name: richdemo.customer.purchases.0
