feat: Implement batch listener

--- a/kafka-consumer/src/main/resources/application.yaml
+++ b/kafka-consumer/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ kafka:
   consumer:
     client-id: kafka-demo-consumer
     group-id: kafka-demo-consumer-group-id-1
-    processing-type: single
+    processing-type: batch
     idempotent: true
   topics:
     purchases:
