--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -195,4 +195,4 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: dbcache
-    restart: always
+    restart: unless-stopped
