--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,14 +71,53 @@ services:
     depends_on:
       - zookeeper
 
+  kafka-schema-registry:
+    image: confluentinc/cp-schema-registry:7.4.3
+    container_name: kafka-schema-registry
+    ports:
+      - "9081:9081"
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: kafka-schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "kafka-broker-1:19091,kafka-broker-2:19092,kafka-broker-3:19093"
+    restart: unless-stopped
+    depends_on:
+      - zookeeper
+      - kafka-broker-1
+      - kafka-broker-2
+      - kafka-broker-3
+
+  kafka-control-center:
+    image: confluentinc/cp-enterprise-control-center:7.4.3
+    container_name: kafka-control-center
+    ports:
+      - "9090:9090"
+    environment:
+      PORT: 9090
+      CONTROL_CENTER_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: "kafka-broker-1:19091,kafka-broker-2:19092,kafka-broker-3:19093"
+      CONTROL_CENTER_SCHEMA_REGISTRY_URL: "http://kafka-schema-registry:9081"
+      CONTROL_CENTER_REPLICATION_FACTOR: 1
+      CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
+      CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
+      CONFLUENT_METRICS_TOPIC_REPLICATION: 1
+    restart: unless-stopped
+    depends_on:
+      - zookeeper
+      - kafka-broker-1
+      - kafka-broker-2
+      - kafka-broker-3
+      - kafka-schema-registry
+
   ### Demo Producer & Consumer ###
 
   producer-1:
     build:
       context: kafka-producer
       dockerfile: Dockerfile
-    container_name: producer-1
     image: kafka-producer:latest
+    container_name: producer-1
+    profiles:
+      - demo
     ports:
       - "8081:8081"
     environment:
