--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
     </parent>
 
     <groupId>com.richcode</groupId>
-    <artifactId>springboot-kafka-demo</artifactId>
+    <artifactId>spring-boot-kafka-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>springboot-kafka-demo</name>
+    <name>spring-boot-kafka-demo</name>
     <description>Kafka Demo with SpringBoot</description>
 
     <modules>
