--- a/kafka-producer/pom.xml
+++ b/kafka-producer/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.richcode</groupId>
-        <artifactId>springboot-kafka-demo</artifactId>
+        <artifactId>spring-boot-kafka-demo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
